<resources>
    <string name="app_name">CalculatorCPTS</string>
    <string name="del">DELETE</string>
    <string name="clear">CLEAR</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="div">/</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="multiple">*</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="digit0">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="xor">XOR</string>
    <string name="backspace">⟵</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="opened_brecket">(</string>
    <string name="closed_brecket">)</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
</resources>
